--- a/eid-archetype-seam/src/main/resources/archetype-resources/pom.xml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/pom.xml
@@ -65,6 +65,11 @@
 				<artifactId>el-api</artifactId>
 				<version>1.0</version>
 			</dependency>
+			<dependency>
+				<groupId>org.hibernate.javax.persistence</groupId>
+				<artifactId>hibernate-jpa-2.0-api</artifactId>
+				<version>1.0.0.Final</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
