--- a/trunk/eid-archetype-seam/src/main/resources/archetype-resources/pom.xml
+++ b/trunk/eid-archetype-seam/src/main/resources/archetype-resources/pom.xml
@@ -28,6 +28,11 @@
 					<artifactId>jboss-maven-plugin</artifactId>
 					<version>1.5.0</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-ejb-plugin</artifactId>
+					<version>2.3</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
@@ -69,6 +74,11 @@
 				<groupId>org.hibernate.javax.persistence</groupId>
 				<artifactId>hibernate-jpa-2.0-api</artifactId>
 				<version>1.0.0.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.ejb</groupId>
+				<artifactId>ejb-api</artifactId>
+				<version>3.0</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
