--- a/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/src/main/webapp/WEB-INF/web.xml
@@ -39,6 +39,14 @@
         <param-name>org.ajax4jsf.VIEW_HANDLERS</param-name>
         <param-value>com.sun.facelets.FaceletViewHandler</param-value>
     </context-param>
+    <filter>
+          <filter-name>RichFaces Filter</filter-name>
+          <filter-class>org.ajax4jsf.Filter</filter-class>
+     </filter>
+     <filter-mapping>
+          <filter-name>RichFaces Filter</filter-name>
+          <url-pattern>*.seam</url-pattern>
+     </filter-mapping>
 
     <!-- Facelets -->
     <context-param>
@@ -65,6 +73,9 @@
     </context-param>
 
     <!-- JSF -->
+    <listener>
+        <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
+    </listener>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
