--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-jpa/pom.xml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-jpa/pom.xml
@@ -10,6 +10,15 @@
 
 	<name>JPA</name>
 
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
