--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/web.xml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/web.xml
@@ -39,6 +39,14 @@
         <param-name>org.ajax4jsf.VIEW_HANDLERS</param-name>
         <param-value>com.sun.facelets.FaceletViewHandler</param-value>
     </context-param>
+    <filter>
+          <filter-name>RichFaces Filter</filter-name>
+          <filter-class>org.ajax4jsf.Filter</filter-class>
+     </filter>
+     <filter-mapping>
+          <filter-name>RichFaces Filter</filter-name>
+          <url-pattern>*.seam</url-pattern>
+     </filter-mapping>
 
     <!-- Facelets -->
     <context-param>
@@ -75,4 +83,34 @@
         <url-pattern>*.seam</url-pattern>
     </servlet-mapping>
 
+	<!-- eID Applet -->
+	<servlet>
+		<servlet-name>AuthenticationAppletServiceServlet</servlet-name>
+		<servlet-class>be.fedict.eid.applet.service.AppletServiceServlet</servlet-class>
+		<init-param>
+			<param-name>AuthenticationService</param-name>
+			<param-value>${admin-control-jndi-pattern-prefix}AuthenticationServiceBean</param-value>
+		</init-param>
+		<init-param>
+			<param-name>IncludeCertificates</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>PreLogoff</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>Logoff</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>NoPKCS11</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AuthenticationAppletServiceServlet</servlet-name>
+		<url-pattern>/applet-service-authentication</url-pattern>
+	</servlet-mapping>
+	
 </web-app>
