--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/web.xml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/web.xml
@@ -96,6 +96,10 @@
 			<param-value>true</param-value>
 		</init-param>
 		<init-param>
+			<param-name>IncludeIdentity</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
 			<param-name>PreLogoff</param-name>
 			<param-value>true</param-value>
 		</init-param>
