--- a/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/web.xml
@@ -100,6 +100,10 @@
 			<param-value>true</param-value>
 		</init-param>
 		<init-param>
+			<param-name>IncludePhoto</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
 			<param-name>PreLogoff</param-name>
 			<param-value>true</param-value>
 		</init-param>
