--- a/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-model-ejb/pom.xml
+++ b/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-model-ejb/pom.xml
@@ -30,6 +30,10 @@
 			<version>${version}</version>
 		</dependency>
 		<dependency>
+			<groupId>be.fedict.eid-applet</groupId>
+			<artifactId>eid-applet-service</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>javax.ejb</groupId>
 			<artifactId>ejb-api</artifactId>
 		</dependency>
