--- a/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/pom.xml
+++ b/trunk/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/pom.xml
@@ -9,4 +9,33 @@
 	<packaging>war</packaging>
 
 	<name>Web Application</name>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.jboss.seam</groupId>
+			<artifactId>jboss-seam-ui</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jboss.seam</groupId>
+					<artifactId>jboss-seam-jul</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.seam</groupId>
+			<artifactId>jboss-seam</artifactId>
+			<type>ejb</type>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>be.fedict.eid-idp</groupId>
+			<artifactId>eid-idp-sp-protocol-saml2</artifactId>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 </project>
