--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-ear/pom.xml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-ear/pom.xml
@@ -35,13 +35,11 @@
 							<groupId>${groupId}</groupId>
 							<artifactId>${rootArtifactId}-control-ejb</artifactId>
 						</ejbModule>
-						<!-- 
 						<webModule>
 							<groupId>${groupId}</groupId>
 							<artifactId>${rootArtifactId}-war</artifactId>
 							<contextRoot>/${context-root}</contextRoot>
 						</webModule>
-						-->
 						<webModule>
 							<groupId>${groupId}</groupId>
 							<artifactId>${rootArtifactId}-admin-war</artifactId>
@@ -87,14 +85,12 @@
 			<version>${version}</version>
 			<type>ejb</type>
 		</dependency>
-		<!-- 
 		<dependency>
 			<groupId>${groupId}</groupId>
 			<artifactId>${rootArtifactId}-war</artifactId>
 			<version>${version}</version>
 			<type>war</type>
 		</dependency>
-		-->
 		<dependency>
 			<groupId>${groupId}</groupId>
 			<artifactId>${rootArtifactId}-admin-war</artifactId>
@@ -123,6 +119,10 @@
 			<groupId>com.sun.facelets</groupId>
 			<artifactId>jsf-facelets</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>be.fedict.eid-idp</groupId>
+			<artifactId>eid-idp-sp-protocol-saml2</artifactId>
+		</dependency>
 		<!-- The following dependencies are provided by the JavaEE runtime. -->
 		<dependency>
 			<groupId>javax.el</groupId>
@@ -147,6 +147,26 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.security</groupId>
+			<artifactId>jacc</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-rt</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.xerces</groupId>
+			<artifactId>xml-apis</artifactId>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
