--- a/eid-archetype-seam/src/main/resources/archetype-resources/pom.xml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/pom.xml
@@ -145,6 +145,11 @@
 				<artifactId>jsf-api</artifactId>
 				<version>1.2_13</version>
 			</dependency>
+			<dependency>
+				<groupId>javassist</groupId>
+				<artifactId>javassist</artifactId>
+				<version>3.12.1.GA</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
