--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/pom.xml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/pom.xml
@@ -8,7 +8,7 @@
 	<version>${version}</version>
 	<packaging>war</packaging>
 
-	<name>Admin Web Application</name>
+	<name>${application-title} Admin Web Application</name>
 
 	<build>
 		<plugins>
@@ -48,6 +48,7 @@
 							</includes>
 						</resource>
 					</webResources>
+					<classifier>${environment}</classifier>
 				</configuration>
 			</plugin>
 		</plugins>
