--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-model-ejb/pom.xml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-model-ejb/pom.xml
@@ -8,7 +8,7 @@
 	<version>${version}</version>
 	<packaging>ejb</packaging>
 
-	<name>Model</name>
+	<name>${application-title} Model</name>
 
 	<build>
 		<plugins>
@@ -18,6 +18,7 @@
 				<configuration>
 					<ejbVersion>3.1</ejbVersion>
 					<generateClient>true</generateClient>
+					<classifier>${environment}</classifier>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -28,6 +29,7 @@
 			<groupId>${groupId}</groupId>
 			<artifactId>${rootArtifactId}-jpa</artifactId>
 			<version>${version}</version>
+			<classifier>${environment}</classifier>
 		</dependency>
 		<dependency>
 			<groupId>be.fedict.eid-applet</groupId>
