IE filter as work-around for RichFaces 3.3

--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-ear/pom.xml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-ear/pom.xml
@@ -69,6 +69,11 @@
 		</dependency>
 		<dependency>
 			<groupId>${groupId}</groupId>
+			<artifactId>${rootArtifactId}-commons</artifactId>
+			<version>${version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${groupId}</groupId>
 			<artifactId>${rootArtifactId}-model-ejb</artifactId>
 			<version>${version}</version>
 			<type>ejb</type>
