resolved some JBoss WARN messages during startup

--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/web.xml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,9 @@
 
     <!-- JBoss Seam -->
     <listener>
+    	<listener-class>com.sun.faces.config.ConfigureListener</listener-class>
+    </listener>
+    <listener>
         <listener-class>org.jboss.seam.servlet.SeamListener</listener-class>
     </listener>
 
